--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
@@ -32,6 +33,6 @@
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
-    "file-loader": "^0.11.2"
+    "jquery": "^3.2.1"
   }
 }
